[metadata]
# replace with your username:
name = recq-NSC
version = 0.0.1
author = Nate Costello
author_email = natecostello@gmail.com
description = A package that collects information from the REC Q Battery Management System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natecostello/rec_bms_status
project_urls =
    Bug Tracker = https://github.com/natecostello/rec_bms_status/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src